== Mariculture 1.2.0 for Minecraft v1.6.X==
====New====
* Manual Turbines, right click them to provide RF
* Redstone Flux Fishing Rod
* Added Snorkel, cheap early game diving assistance, allows you to breathe slightly longer underwater
* Fish Sorter added
* Melting System, completely redone ;)
* Void Bottles are now placeable(work like a Void Tank)
* Fish Tank(read chest) Added
* Custom Block textures, are now 'side' based, so the side of the block you click gets the texture(e.g. select top of crafting table with paintbrush, and you'll paint all sides with that texture)
* New GUIs, with Notifications for missing items, and redstone/auto-eject controls
* New Speed, Capacitor, Salinator and Filter Upgrades
* Retro-Gen
* Jewelry is now repairable via the Blacksmith's Anvil, it requires XP per each hit, which will repair one damage point(can also repair all other repairable items this way), The materials used now also have more of an effect, they change enchantability, durability and the time needed to make
* NEI Integration for a lot of things
* Bunch of New Foods
* Guide Books (With Custom book support, so you can write your own guides(xml based out of game).
* Right clicking a squid with a fishing net will use up the net and drop a live raw squid
* New Jewelry Enchantment, Step Up, lets you walk up blocks
* New Enchantment 'Luck of the Irish', Goes on Mirrors and Fishing Rods, gives bonus to enchantibility, or better catch rates
====Changes====
* Rewote 95% of things, should a lot less laggy
* Nerfed Calamari(Less Saturation(still more than steak), gives 2 instead of 3 on crafting) and Buffed Fish Fingers (Gives 64).
* Completely removed Limestone Stairs/Slabs, as not needed. Also removed all the molten metals in block form, was it really neccessary?
* Full Dropped BC Power Support, now you can only use RF to Power my machines, and turbines will only provide RF